bug correction: fftw include dir missing

--- a/lib/thfftw/CMakeLists.txt
+++ b/lib/thfftw/CMakeLists.txt
@@ -13,7 +13,7 @@ SET(src
 
 SET(src ${src})
 
-
+INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
 ADD_LIBRARY(thfftw SHARED ${src})
 TARGET_LINK_LIBRARIES(thfftw TH ${FFTW_LIBRARIES})
 
