--- a/pkg/fftw/CMakeLists.txt
+++ b/pkg/fftw/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(luasrc init.lua)
 
 ADD_TORCH_WRAP(thfftwwrap thfftw.lua)
 
+INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${Torch_SOURCE_INCLUDES})
 
 ADD_TORCH_PACKAGE(fftw "${src}"  "${luasrc}")
